--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -37,6 +37,122 @@ author={Freudenberg, JohannesM and Joshi, VineetK and Hu, Zhen and Medvedovic, M
 pages={1-15},
 language={English}
 }
-
-
+@Article{Vijver1,
+   Author="van de Vijver, M. J.  and He, Y. D.  and van't Veer, L. J.  and Dai, H.  and Hart, A. A.  and Voskuil, D. W.  and Schreiber, G. J.  and Peterse, J. L.  and Roberts, C.  and Marton, M. J.  and Parrish, M.  and Atsma, D.  and Witteveen, A.  and Glas, A.  and Delahaye, L.  and van der Velde, T.  and Bartelink, H.  and Rodenhuis, S.  and Rutgers, E. T.  and Friend, S. H.  and Bernards, R. ",
+   Title="{{A} gene-expression signature as a predictor of survival in breast cancer}",
+   Journal="N. Engl. J. Med.",
+   Year="2002",
+   Volume="347",
+   Number="25",
+   Pages="1999--2009",
+   Month="Dec"
+}
+@article{Sotiriou1,
+author = {Sotiriou, Christos and Neo, Soek-Ying and McShane, Lisa M. and Korn, Edward L. and Long, Philip M. and Jazaeri, Amir and Martiat, Philippe and Fox, Steve B. and Harris, Adrian L. and Liu, Edison T.}, 
+title = {Breast cancer classification and prognosis based on gene expression profiles from a population-based study},
+volume = {100}, 
+number = {18}, 
+pages = {10393-10398}, 
+year = {2003}, 
+doi = {10.1073/pnas.1732912100}, 
+abstract ={Comprehensive gene expression patterns generated from cDNA microarrays were
+ correlated with detailed clinico-pathological characteristics and clinical
+ outcome in an unselected group of 99 node-negative and node-positive breast
+ cancer patients. Gene expression patterns were found to be strongly associated
+ with estrogen receptor (ER) status and moderately associated with grade, but
+ not associated with menopausal status, nodal status, or tumor size.
+ Hierarchical cluster analysis segregated the tumors into two main groups based
+ on their ER status, which correlated well with basal and luminal
+ characteristics. Cox proportional hazards regression analysis identified 16
+ genes that were significantly associated with relapse-free survival at a
+ stringent significance level of 0.001 to account for multiple comparisons. Of
+ 231 genes previously reported by others [van't Veer, L. J., et al.
+ (2002) Nature 415, 530-536] as being associated with survival, 93
+ probe elements overlapped with the set of 7,650 probe elements represented on
+ the arrays used in this study. Hierarchical cluster analysis based on the set
+ of 93 probe elements segregated our population into two distinct subgroups
+ with different relapse-free survival (P < 0.03). The number of
+ these 93 probe elements showing significant univariate association with
+ relapse-free survival (P < 0.05) in the present study was 14,
+ representing 11 unique genes. Genes involved in cell cycle, DNA replication,
+ and chromosomal stability were consistently elevated in the various poor
+ prognostic groups. In addition, glutathione S-transferase M3 emerged
+ as an important survival marker in both studies. When taken together with
+ other array studies, our results highlight the consistent biological and
+ clinical associations with gene expression profiles.}, 
+URL = {http://www.pnas.org/content/100/18/10393.abstract}, 
+eprint = {http://www.pnas.org/content/100/18/10393.full.pdf+html}, 
+journal = {Proceedings of the National Academy of Sciences} 
+}
+@article{Wold1,
+title = "PLS-regression: a basic tool of chemometrics ",
+journal = "Chemometrics and Intelligent Laboratory Systems ",
+volume = "58",
+number = "2",
+pages = "109 - 130",
+year = "2001",
+note = "<ce:title>PLS Methods</ce:title> ",
+issn = "0169-7439",
+doi = "http://dx.doi.org/10.1016/S0169-7439(01)00155-1",
+url = "http://www.sciencedirect.com/science/article/pii/S0169743901001551",
+author = "Svante Wold and Michael Sjöström and Lennart Eriksson",
+keywords = "\{PLS\}",
+keywords = "\{PLSR\}",
+keywords = "Two-block predictive \{PLS\}",
+keywords = "Latent variables",
+keywords = "Multivariate analysis "
+}
+@incollection{kmeans,
+year={2008},
+isbn={978-3-540-87478-2},
+booktitle={Machine Learning and Knowledge Discovery in Databases},
+volume={5211},
+series={Lecture Notes in Computer Science},
+editor={Daelemans, Walter and Goethals, Bart and Morik, Katharina},
+doi={10.1007/978-3-540-87479-9_3},
+title={Data Clustering: 50 Years Beyond K-means},
+url={http://dx.doi.org/10.1007/978-3-540-87479-9_3},
+publisher={Springer Berlin Heidelberg},
+author={Jain, AnilK.},
+pages={3-4}
+}
+@article{Sorlie1,
+author = {Sørlie, Therese and Perou, Charles M. and Tibshirani, Robert and Aas, Turid and Geisler, Stephanie and Johnsen, Hilde and Hastie, Trevor and Eisen, Michael B. and van de Rijn, Matt and Jeffrey, Stefanie S. and Thorsen, Thor and Quist, Hanne and Matese, John C. and Brown, Patrick O. and Botstein, David and Lønning, Per Eystein and Børresen-Dale, Anne-Lise}, 
+title = {Gene expression patterns of breast carcinomas distinguish tumor subclasses with clinical implications},
+volume = {98}, 
+number = {19}, 
+pages = {10869-10874}, 
+year = {2001}, 
+doi = {10.1073/pnas.191367098}, 
+abstract ={The purpose of this study was to classify breast carcinomas based on variations in gene expression patterns derived from cDNA microarrays and to correlate tumor characteristics to clinical outcome. A total of 85 cDNA microarray experiments representing 78 cancers, three fibroadenomas, and four normal breast tissues were analyzed by hierarchical clustering. As reported previously, the cancers could be classified into a basal epithelial-like group, an ERBB2-overexpressing group and a normal breast-like group based on variations in gene expression. A novel finding was that the previously characterized luminal epithelial/estrogen receptor-positive group could be divided into at least two subgroups, each with a distinctive expression profile. These subtypes proved to be reasonably robust by clustering using two different gene sets: first, a set of 456 cDNA clones previously selected to reflect intrinsic properties of the tumors and, second, a gene set that highly correlated with patient outcome. Survival analyses on a subcohort of patients with locally advanced breast cancer uniformly treated in a prospective study showed significantly different outcomes for the patients belonging to the various groups, including a poor prognosis for the basal-like subtype and a significant difference in outcome for the two estrogen receptor-positive groups.}, 
+URL = {http://www.pnas.org/content/98/19/10869.abstract}, 
+eprint = {http://www.pnas.org/content/98/19/10869.full.pdf+html}, 
+journal = {Proceedings of the National Academy of Sciences} 
+}
+@misc{Hedges1,
+  title={Statistical methods for meta-analysis},
+  author={Hedges, Larry V and Olkin, Ingram and Statistiker, Mathematischer and Olkin, Ingram and Olkin, Ingram},
+  year={1985},
+  publisher={Academic Press New York}
+}
+@Article{Cleanex,
+   Author="Praz, V.  and Jagannathan, V.  and Bucher, P. ",
+   Title="{{C}lean{E}x: a database of heterogeneous gene expression data based on a consistent gene nomenclature}",
+   Journal="Nucleic Acids Res.",
+   Year="2004",
+   Volume="32",
+   Number="Database issue",
+   Pages="D542--547",
+   Month="Jan"
+}
+@article{Elston1,
+  title={Pathological prognostic factors in breast cancer. I. The value of histological grade in breast cancer: experience from a large study with long-term follow-up. CW Elston \& IO Ellis. Histopathology 1991; 19; 403--410},
+  author={Elston, CW and Ellis, IO},
+  journal={Histopathology},
+  volume={41},
+  number={3a},
+  pages={151--151},
+  year={2002},
+  publisher={Wiley Online Library}
+}
 
