--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -11,6 +11,45 @@ URL = {http://jnci.oxfordjournals.org/content/98/4/262.abstract},
 eprint = {http://jnci.oxfordjournals.org/content/98/4/262.full.pdf+html}, 
 journal = {Journal of the National Cancer Institute} 
 }
+@Article{kravchenko1,
+   Author="Kravchenko, J.  and Akushevich, I.  and Seewaldt, V. L.  and Abernethy, A. P.  and Lyerly, H. K. ",
+   Title="{{B}reast cancer as heterogeneous disease: contributing factors and carcinogenesis mechanisms}",
+   Journal="Breast Cancer Res. Treat.",
+   Year="2011",
+   Volume="128",
+   Number="2",
+   Pages="483--493",
+   Month="Jul"
+}
+@Article{komaki1,
+   Author="Komaki, K.  and Sano, N.  and Tangoku, A. ",
+   Title="{{P}roblems in histological grading of malignancy and its clinical significance in patients with operable breast cancer}",
+   Journal="Breast Cancer",
+   Year="2006",
+   Volume="13",
+   Number="3",
+   Pages="249--253"
+}
+@Article{dalton1,
+   Author="Dalton, L. W.  and Pinder, S. E.  and Elston, C. E.  and Ellis, I. O.  and Page, D. L.  and Dupont, W. D.  and Blamey, R. W. ",
+   Title="{{H}istologic grading of breast cancer: linkage of patient outcome with level of pathologist agreement}",
+   Journal="Mod. Pathol.",
+   Year="2000",
+   Volume="13",
+   Number="7",
+   Pages="730--735",
+   Month="Jul"
+}
+@Article{howard1,
+   Author="Howard, J. H.  and Bland, K. I. ",
+   Title="{{C}urrent management and treatment strategies for breast cancer}",
+   Journal="Curr. Opin. Obstet. Gynecol.",
+   Year="2012",
+   Volume="24",
+   Number="1",
+   Pages="44--48",
+   Month="Feb"
+}
 @article{Treeview,
 year={2010},
 journal={BMC Genomics},
@@ -155,4 +194,78 @@ journal = {Proceedings of the National Academy of Sciences}
   year={2002},
   publisher={Wiley Online Library}
 }
+@article{desantis1,
+  title={Breast cancer statistics, 2011},
+  author={DeSantis, Carol and Siegel, Rebecca and Bandi, Priti and Jemal, Ahmedin},
+  journal={CA: a cancer journal for clinicians},
+  volume={61},
+  number={6},
+  pages={408--418},
+  year={2011},
+  publisher={Wiley Online Library}
+}
+
+@Article{Nature1,
+   Author="Koboldt, D. C. et. al. ",
+   Title="{{C}omprehensive molecular portraits of human breast tumours}",
+   Journal="Nature",
+   Year="2012",
+   Volume="490",
+   Number="7418",
+   Pages="61--70",
+   Month="Oct"
+}
+@Article{simpson1,
+   Author="Simpson, P. T.  and Reis-Filho, J. S.  and Gale, T.  and Lakhani, S. R. ",
+   Title="{{M}olecular evolution of breast cancer}",
+   Journal="J. Pathol.",
+   Year="2005",
+   Volume="205",
+   Number="2",
+   Pages="248--254",
+   Month="Jan"
+}
+@Article{kesson1,
+   Author="Kesson, E. M.  and Allardice, G. M.  and George, W. D.  and Burns, H. J.  and Morrison, D. S. ",
+   Title="{{E}ffects of multidisciplinary team working on breast cancer survival: retrospective, comparative, interventional cohort study of 13 722 women}",
+   Journal="BMJ",
+   Year="2012",
+   Volume="344",
+   Pages="e2718"
+}
+@Article{henderson1,
+   Author="Henderson, I. C.  and Patek, A. J. ",
+   Title="{{T}he relationship between prognostic and predictive factors in the management of breast cancer}",
+   Journal="Breast Cancer Res. Treat.",
+   Year="1998",
+   Volume="52",
+   Number="1-3",
+   Pages="261--288"
+}
+
+@Article{bloom1,
+   Author="BLOOM, H. J.  and RICHARDSON, W. W. ",
+   Title="{{H}istological grading and prognosis in breast cancer; a study of 1409 cases of which 359 have been followed for 15 years}",
+   Journal="Br. J. Cancer",
+   Year="1957",
+   Volume="11",
+   Number="3",
+   Pages="359--377",
+   Month="Sep"
+}
+
+
+@Article{bertucci1,
+   Author="Bertucci, F.  and Birnbaum, D. ",
+   Title="{{R}easons for breast cancer heterogeneity}",
+   Journal="J. Biol.",
+   Year="2008",
+   Volume="7",
+   Number="2",
+   Pages="6"
+}
+
+
+
+
 
