--- a/paper/mainpaper.tex
+++ b/paper/mainpaper.tex
@@ -40,8 +40,126 @@ assist in diagnosis and treatment options for breast cancer patients.
 
 \end{abstract}
 
-\section{Background}
+
+\section{Background}   
+Breast Cancer is the most common malignancy among women and is the second 
+leading cause of cancer death. DeSantis et al predict that there will be 230,480 
+new cases of invasive breast cancer in 2011 and that there will be 39,520 deaths 
+related to breast cancer.  The incident rate of new cases of breast cancer is highest 
+for Whites and second highest for African Americans \cite{henderson1}.  Breast cancer incidence is lowest for those of American Indian/Alaska Native, 
+Asian American/Pacific Islander, and Hispanic/Latina descent.  Similarly morality is 
+highest for Whites and second highest for African Americans while the lowest mortality 
+rate is for individuals of American Indian/Alaska Native, Asian American/Pacific Islander, 
+and Hispanic/Latina descent \cite{henderson1}. \\
+\subsection{Breast Cancer Heterogeneity and Treatment} 
+The different outcomes of breast cancer related to age and race indicate that not all 
+breast cancers behave similarly and that there are likely various environmental and 
+genetic factors that influence outcomes.  In fact, studies have shown that breast 
+cancers are clinically and genetically heterogeneous\cite{desantis1}. Significant 
+molecular heterogeneity was suggested by a comprehensive study on primary breast 
+cancers by using multiple molecular information platforms covering genomic DNA 
+copy number arrays, DNA methylation, exome sequencing, messenger RNA arrays, 
+microRNA sequencing and reverse-phase protein arrays \cite{Nature1}. \\
+
+The analysis of molecular pathways has improved our understanding of the clinical 
+behavior of breast cancer; however, the more we learn about the molecular characteristics 
+of breast cancer, the more we appreciate the diversity of the disease \cite{simpson1}\cite{komaki1}. Breast 
+cancer treatment decisions are made based on multiple variables, including genetic 
+factors, disease burden, tumor markers, estrogen receptor status, and patient preference; 
+however, treatments continue to evolve and the search for the optimal treatment protocol is 
+ongoing \cite{kesson1}. \\
+
+Currently, breast cancer is treated with a multidisciplinary approach involving surgical 
+oncology, radiation oncology, and medical oncology, which has been associated with a 
+reduction in breast cancer mortality  \cite{kesson1}.  Generally, six types of standard treatment are used: 
+Surgery, sentinel lymph node biopsy followed by surgery, radiation therapy, chemotherapy, 
+hormone therapy and targeted therapy \cite{howard1}.  Most patients with breast cancer have surgery 
+to remove the cancer from the breast. Some of the lymph nodes under the arm are usually 
+taken out and looked at under a microscope to see if they contain cancer cells. Radiation 
+therapy may follow surgery in an effort to eradicate residual disease while reducing 
+recurrence rates. Surgical resection with or without radiation is the standard treatment for 
+ductal carcinoma in situ. Hormone therapy and chemotherapy are the 2 main interventions
+ for treating metastatic breast cancer. Common chemotherapeutic regimens include 
+Docetaxel, Cyclophosphamide, Doxorubicin, Trastuzumab, etc.  Two selective estrogen 
+receptor modulators (SERMs), tamoxifen and raloxifene, are approved for reduction of 
+breast cancer risk in high-risk women \cite{desantis1}. In addition, new types of treatment such as 
+high-dose chemotherapy with stem cell transplant is being tested in clinical trials. \\
+\subsection{Molecular Classification, Clinical Stages and Prognosis}
+Four main breast cancer classes were identified in a comprehensive study of human 
+breast tumors based on mRNA  expression profiles \cite{Nature1}: Luminal subtypes, HER2-enriched 
+and Basal subtypes. The luminal subtypes are characterized as luminal A and luminal B. 
+They are the most common subtypes of breast cancer and make up the majority of 
+ER-positive breast cancers. The name “luminal” derives from similarity in gene expression
+ between these tumors and the luminal epithelium of the breast. They typically express 
+cytokeratins 8 and 18. The HER2-enriched subtype makes up about 10 to 15 percent 
+of breast cancers and is characterized by high expression of HER2 and proliferation
+ gene clusters and low expression of the luminal and basal gene clusters. These 
+tumors are often negative for ER and PR.  In basal-like tumors, most of these tumors 
+fall under the category of triple-negative breast cancers because they are ER, PR and HER2 
+negative \cite{Nature1}.\\
+
+However, since breast cancers differ in many ways, such as in their cell of origin, the 
+molecular alterations causing them and the susceptibility and defenses of the patient, 
+and this makes it difficult to give the most appropriate treatment based on the molecular
+ portraits \cite{bertucci1}. Recent studies suggested using histologic grade can greatly reduce the 
+heterogeneity of breast cancer outcome  predictions \cite{dalton1}. The Bloom-Richardson
+ breast cancer staging system has now basically been subsumed as the American 
+Joint Committee on Cancer (AJCC) classfication system \cite{bloom1}. The paper Sotiriou et al 
+used Elston grading system. The Elston-Ellis breast cancer grading system was a 
+modification of the original Bloom-Richardson system, and is still in use in many 
+places in Europe \cite{Elston1}. There are three factors that the pathologists take into consideration: 
+
+\begin{enumerate}
+ \item The amount of gland formation; 
+ \item The nuclear features, i.e. the degree of nuclear pleomorphism; 
+ \item The mitotic activity \cite{Elston1}
+\end{enumerate}
+
+Based on Elston grading, histological grade 1 have the most favorable outcome and 
+histological grade 3 having a poorer outcome. When histological grades are compared with
+ survival time, histologic grade 1 tumor patients have a lower tumor recurrence rate or are a low 
+risk group. In contrast histologic grade 3 tumor patients have a high tumor recurrence rate or are a
+ high risk group. Grade 2 tumors have been difficult to classify based on their intermediate or 
+unclear appearance and as a result grade 2 offers variable prognosis. Grade 2 tumors consist 
+of a substantial number of tumors (30-60\%) making classification of these tumors 
+extremely important. In this paper Sotiriou et al. developed a 97-gene signature which 
+resulted in the classification of grade 2 tumors into low or high recurrence risk based on GGI \cite{bertucci1}.\\
+
 \section{Purpose and Hypothesis}
+Since Grade 2 phenotypes are often associated with an intermediate prognosis and treatment 
+recommendations for this phenotype are ambiguous, the goal of this paper is to determine if a 
+gene signature can distinguish histologic grade 2 cancers into high and low risk phenotypes.  
+We had 3 primary aims: 
+\begin{enumerate}
+ \item Validate the Sotiriou et al findings using the genomics portal data base
+ \item Determine a gene signature that will distinguish grade 1 and 3 tumors based on survival analysis
+ \item Identify biological pathways implicated by our gene signature
+\end{enumerate}
+
+We hypothesize that our gene signature will distinguish grade 2 tumors with a good (grade 1 like) 
+prognosis form grade 2 tumors with a poor (grade 3 like) prognosis and that biological pathways 
+associated with our gene signature will primarily consist of cell cycle regulation processes.  
+The study could improve our ability to predict breast cancer behavior , which is an essential step towards providing 
+individualized treatment  plan.\\
+\section{Discussion}
+Limitations to the study include pathologist variation and possible misclassification, region or 
+race specific differences since two populations are presented, and complications to analysis with ER status. \\
+
+In our study, we only used estrogen receptor positive tumors to look at the differentially 
+expressed genes. Thus the conclusions are limited to only the ER positive tumors and 
+inferences cannot be made as to ER negative tumors. Future work would include looking into the
+ differentially expressed genes in both estrogen receptors positive and negative tumors and then
+ compare the gene list between each other. This can shed light on which specific genes are dependent 
+on the ER status of tumors. \\
+
+Future work would include looking into the differentially expressed genes in both estrogen 
+receptor positive and negative tumors and then compare the gene list between each other. 
+In addition, looking at expression signatures based on AJCC staging classification systems 
+may decease may decrease some data set variation. The main criteria of the AJCC staging 
+systems include tumor size, lymph node status, and distant metastasis. Future studies should 
+also examine age of onset, races and geographic regions to look for variability and to improve 
+treatment for different groups.\\ 
+
 \section{Methods and Materials}
 \subsection{Data Acquisition and Sampling}
 
@@ -62,12 +180,15 @@ Histologic tumor grade in these datasets was based on the Elston –
 Ellis grading system \cite{Elston1} and the standardized mean difference of Hedges 
 and Olkin \cite{Hedges1} was used to rank genes by their differential expression. The probe 
 sets of the Affymetrix U133A Genechips were mapped to other microarray platforms
- by matching the Unigene identifiers (version 180), following the technique mentioned in Praz et al. \cite{Cleanex}
+ by matching the Unigene identifiers (version 180), following the technique mentioned 
+in Praz et al. \cite{Cleanex}.\\
 For gene expression analysis, RNA was isolated by utilization of TRIzol, which 
 is a monophasic solution of phenol and guanidinium isothiocyanate, used for 
 solubilizing biological material and denaturation of proteins. Agilent Bioanalyzer 
 was used for optimization and quality control of the RNA obtained from all those
- tumor samples and only the ones with good quality of RNA were acknowledged for further examination. 
+ tumor samples and only the ones with good quality of RNA were acknowledged 
+for further examination.\\
+
 For the purpose of our analysis, while selecting the grade-associated genes, 
 we only considered the ER-positive tumors and excluded the ones with ER-negative
  and NA status on account of the relationship between the ER status and histologic 
@@ -75,10 +196,15 @@ grade. As mentioned in the Sotiriou et al. paper \cite{Sotiriou}, majority of th
  are grouped as either intermediate (Grade 2) or high (Grade 3) histologic grade, 
 assuming that we had utilized all histologic grade 1 and 3 tumors despite their ER 
 status during our analysis, we might have ended up choosing ER-identified genes
- that were falsely connected with grade.
+ that were falsely connected with grade.\\
 
 
 \subsection{Differential Expression Modeling Methods}
+\begin{wrapfigure}{r}{0.63\textwidth}
+\centering
+\includegraphics[scale=0.43]{docs/grade1and3differentiallyexpressed}
+\caption{Grade 1 and Grade 3 Differentially Expressed}\label{grade13diff}
+\end{wrapfigure}
 Our method of assessing histological grade of primary breast cancer consists of three phases. The first phase is
 a semi-supervised ranking of genes and grade 1 and grade 3 tumors based on maximum differential
 expression. The second phase consists of selecting a set of genes that are up-regulated with 
@@ -86,23 +212,25 @@ grade 3 tumors and down regulated in grade 3. In the third phase, we generated t
 Classification of the grade 2 tumors is then performed using these groups as models. Below we expand upon
 our process in detail.\\
 The gene signature identification process consisted of assessing the Sotiriou breast cancer data set with Genomics Portals (genomicsportals.org).
-Genomics portals performs differential analysis on genes and samples using the CLEAN algorithm\cite{CLEAN}. CLEAN co-clusters
+Genomics portals performs differential analysis on genes and samples using the CLEAN algorithm\cite{CLEAN}. 
+CLEAN co-clusters
 the genes and sample grades hierarchically, using data from the dataset and a database of known gene functional groups. Highly differentially
 expressed genes were identified with a p-value of .001, and fold change over expression level of 2. The results of this analysis
 were inspected in genomics portal's Treeview navigator\cite{Treeview}, and the visually most cohesive up-regulated set of genes
-corresponding to grade 3 tumors was selected as our gene signature\ref{grade13diff}. Inspection with Treeview failed to suggested a 
+corresponding to grade 3 tumors was selected as our gene signature\ref{grade13diff}. 
+Inspection with Treeview failed to suggested a 
 visually significant cluster of down-regulated genes for grade 3 tumors, therefore only up-regulated ones were included in our model. 
-We acquired a set of 49 differentially expressed up-regulated grade 3 tumor genes from this analysis.\\
-\begin{figure}
-\centering
-\includegraphics[scale=0.30]{docs/grade1and3differentiallyexpressed}
-\caption{Grade 1 and Grade 3 Differentially Expressed}\label{grade13diff}
-\end{figure}
-Using the selected set of 49 genes as a signature we supposed a $|$gene signature$|-$dimensional subspace to build our model.
-Withing the subspace, we used the clinically provided grade labels to generate centroids for the two , 1 and 3 - grade, groups following
-the expression (Figure \ref{centroid}) . Noise suppression refinement was performed by removing samples that deviated from the group cluster
-centers by more than 2 standard deviations of the cluster's mean variance.\\
-\begin{figure}
+We acquired a set of 49 differentially expressed up-regulated grade 3 tumor genes from this analysis.
+As expected most of those genes turned out to be cell proliferation and cell cycle regulators, notably among them were:
+\begin{itemize}
+\item Chemokines (known to mediate cell migration and proliferation)
+\item Cyclins (control the progression of cells through the cell cycle by activating cyclin-dependent kinase-cdk enzymes)
+\item Cyclin-dependent kinase inhibitors  (interact with, and dephosphorylate CDK kinase,  thus preventing their activation; reported to be deleted, mutated, or over-expressed in several kinds of cancers)
+\item Aurora Kinase A/ Breast Tumor-Amplified Kinase (involved in microtubule formation and stabilization at the spindle pole during chromosome segregation, may play a role  in tumor development and progression).
+\item Ubiquitin-conjugating enzyme E2S (required for cell cycle progression by degradation of mitotic cyclins, consequently, may be involved in cancer progression).
+\end{itemize}
+
+\begin{wrapfigure}{l}{0.65\textwidth}
 $$
 Centroid(Grade_X)= \left[              \underset{x\in X}     \sum{  { {x_1}    \over {| X |} } }   ,   
  \underset{x\in X}     \sum{  { {x_2}    \over {| X |} } },
@@ -110,50 +238,76 @@ Centroid(Grade_X)= \left[              \underset{x\in X}     \sum{  { {x_1}    \
  \underset{x\in X}     \sum{  { {x_{| gene signature |}}    \over {| X |} } }                 \right] 
 $$
 \caption{Grade Gene Expression Centroid Generation}\label{centroid}
-\end{figure}
+\end{wrapfigure}
+Using the selected set of 49 genes as a signature we supposed a $|$gene signature$|-$dimensional subspace to build our model.
+Withing the subspace, we used the clinically provided grade labels to generate centroids for the two , 1 and 3 - grade, groups following
+the expression (Figure \ref{centroid}) . Noise suppression refinement was performed by removing samples that deviated from the group cluster
+centers by more than 2 standard deviations of the cluster's mean variance.\\
+
+\begin{wrapfigure}{r}{0.64\textwidth}
+%\begin{figure}
+\centering
+\includegraphics[scale=0.38]{docs/grade2onupregulated3}
+\caption{Grade 2 Differentially Expressed Genes from Grade 1 and Grade 3}\label{grade2up}
+%\end{figure}
+\end{wrapfigure}
 For visual assessment of our analysis, we queried the grade 2 tumors against the grade 1 and 3 differentially expressed genes. The resulting chart
 shows a distinct clustering between the grade 1-like and grade 3-like tumors that follow approximately 
 the grade 3 and grade 1 distributions. Assuming the dataset comprises the actual distribution 
 of grade 1 to grade 3 tumors, approximately 55:64 for grade 1 and grade 3 respectively (figure \ref{grade2up}) we reassert our hypothesis
 of the lack of a grade 2 class distinction.
-\begin{figure}
-\centering
-\includegraphics[scale=0.30]{docs/grade2onupregulated3}
-\caption{Grade 2 Differentially Expressed Genes from Grade 1 and Grade 3}\label{grade2up}
-\end{figure}
-\begin{figure}
+
+Classification of grade 2 tumors was then computed by nearest centroid under the euclidean norm following the method in figure \ref{classify}.
+Other distance norms could easily be substituted in place of euclidean, however in this analysis we assumed expression levels were orthogonal
+and linear. The new classifications were then used to recompute the KM-Survival analysis on tumor grades 2A (or grade 1-like) and 2b (or grade 3-like).
+\begin{wrapfigure}{l}{0.5\textwidth}
  $$
 Grade(X) = \underset{C \in Centroids} {\mathrm{argmin}} ~ \left( \sqrt{\sum_{g\in genelist}{ (X_{g} - C_{g})^2}}\right)
 $$
 \caption{Nearest Centroid Classification}\label{classify}
-\end{figure}
-Classification of grade 2 tumors was then computed by nearest centroid under the euclidean norm following the method in figure \ref{classify}.
-The new classifications were then used to recompute the KM-Survival analysis on tumor grades 2A (or grade 1-like) and 2b (or grade 3-like).
+\end{wrapfigure}
 
-
-
-\subsection{Other Unsupervised Learning Methods}
+\subsection{Unsupervised Machine Learning Methods}
 In addition to the use of genomics portals to identify differentially expressed genes, two common unsupervised machine learning techniques were
 used to classify histological grades based on genetic expression. The first method used was the K-Means method. We will forgo an exhaustive explanation
 of K-Means here as it is a long known method with many descriptions and analysis available online. K-Means is an unsupervised clustering method
 that attempts to minimize the inter-cluster distance on a set of N points and K cluster assignments. The method is greedy and iterative, with few guarantees
 on optimality, however combined with random starts, the overall performance of K-Means is actually quite good for spherical clusters\cite{kmeans}. 
 For our testing, following our aforementioned hypothesis of the existence of only two genetically identifiable tumor grades (low and high), we performed
-100 tests using K-Means on 50:50 training:test data comprising grade 1 and grade 3 tumors. The reclassification accuracy results are given in (\ref{KMResults}).
-\begin{itemize}\label{KMResults}
-\item Mean 0.8382
-\item Mode 0.84
-\item Min 0.58
-\item Max 0.94
-\item Var 0.00315
-\end{itemize}
+100 tests using K-Means on 50:50 training:test data comprising grade 1 and grade 3 tumors. The reclassification accuracy results are given below.\\
+%\begin{wrapfigure}{r}{0.2\textwidth}
+\begin{center}
+\begin{tabular}{| l | c | }
+    \hline
+    Mean & 0.8382  \\ \hline
+    Mode & 0.84 \\ \hline
+    Min & 0.58  \\ \hline
+    Max & 0.94  \\ \hline
+     Var &  0.00315  \\ \hline
+  \end{tabular}
+\end{center}
+%\end{wrapfigure}
+
 From the results it is clear there is significant error in the upper and lower bounds for accuracy. This though partially due to the K-Means algorithm
 itself, may have resulted from a badly conditioned training and test dataset split. As 50\% grade 1 and 50\% grade 3 would suggest the optimal split,
 we assert that the actual min accuracy performance is slightly lower than the real performance of K-Means, while the max is no better than could
 ideally be achieved from random 50:50 splitting.\\
+
 The second unsupervised method, Projection to Latent Structures Regression (or Partial Least Squares Regression, \emph{PLSR})\cite{Wold1} proved to 
 be slightly less accurate in its ability to correctly classify data. Despite its accuracy performance shortcomings, it did however
-perform well in its ability to identify highly differentially expressed genes.
+perform well in its ability to identify highly differentially expressed genes. The explanation of these results is likely due to PLSR's maximization of the covariance
+between input data and a set of continuous output training vectors. Though the histological grade is a well ordered set, it is not continuous, and therefor fails to
+exploit some of the benefits of a covariance maximization algorithm. The top grade to expression covariance genes (loading vectors of PLSR) are listed below:
+\begin{center}
+\begin{tabular}{| l | l | l |}
+\hline
+CALML5 & 51806 & calmodulin-like 5\\ \hline
+PBK & 55872 & PDZ binding kinase\\ \hline
+RRM2 & 6241 & ribonucleotide reductase M2\\ \hline
+NEK2 & 4751 & NIMA (never in mitosis gene a)-related kinase\\ \hline
+CCNE2 & 9134 & cyclin E2 \\ \hline
+ \end{tabular}
+\end{center}
 
 %Computed centroids for grades 1 and 3 based on the 49 up-regulated genes identified with genomic portals.\cite{Treeview},\cite{CLEAN}
 
@@ -171,9 +325,8 @@ perform well in its ability to identify highly differentially expressed genes.
 
 \section{Results and Discussion}
 \section{Conclusion}
-90\% of the time it works all the time!
+90\% of the time it works all the time!\\
 \bibliography{refs}
 \bibliographystyle{ieeetr} \markright{ }
-
 
 \end{document}
