added charles and Ben's parts and images

--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -264,7 +264,51 @@ journal = {Proceedings of the National Academy of Sciences}
    Number="2",
    Pages="6"
 }
+% 19131956 
+@Article{Huang1,
+   Author="Huang, d. a.  W.  and Sherman, B. T.  and Lempicki, R. A. ",
+   Title="{{S}ystematic and integrative analysis of large gene lists using {D}{A}{V}{I}{D} bioinformatics resources}",
+   Journal="Nat Protoc",
+   Year="2009",
+   Volume="4",
+   Number="1",
+   Pages="44--57"
+}
 
+3.
+% 24214961 
+@Article{Kanehisa1,
+   Author="Kanehisa, M.  and Goto, S.  and Sato, Y.  and Kawashima, M.  and Furumichi, M.  and Tanabe, M. ",
+   Title="{{D}ata, information, knowledge and principle: back to metabolism in {K}{E}{G}{G}}",
+   Journal="Nucleic Acids Res.",
+   Year="2013",
+   Pages=" ",
+   Month="Nov"
+}
+
+4.
+% 23192552 
+@Article{Kanehisa2,
+   Author="Kanehisa, M. ",
+   Title="{{M}olecular network analysis of diseases and drugs in {K}{E}{G}{G}}",
+   Journal="Methods Mol. Biol.",
+   Year="2013",
+   Volume="939",
+   Pages="263--275"
+}
+
+5.
+% 9847135 
+@Article{Ogata1,
+   Author="Ogata, H.  and Goto, S.  and Sato, K.  and Fujibuchi, W.  and Bono, H.  and Kanehisa, M. ",
+   Title="{{K}{E}{G}{G}: {K}yoto {E}ncyclopedia of {G}enes and {G}enomes}",
+   Journal="Nucleic Acids Res.",
+   Year="1999",
+   Volume="27",
+   Number="1",
+   Pages="29--34",
+   Month="Jan"
+}
 
 
 
