--- a/paper/mainpaper.tex
+++ b/paper/mainpaper.tex
@@ -5,7 +5,7 @@
 \usepackage{graphicx}
 \usepackage{wrapfig}
 \usepackage{url}
-\DeclareGraphicsExtensions{.pdf,.eps,.svg,.pgm}
+\DeclareGraphicsExtensions{.pdf,.eps,.svg,.pgm, .png}
     % EXTREMELY COMMON LaTeX PACKAGES TO INCLUDE:
     \usepackage{amsmath,amsthm, amsfonts,amssymb} % For AMS Beautification
     \usepackage{setspace} % For Single & Double Spacing Commands
@@ -198,12 +198,22 @@ assuming that we had utilized all histologic grade 1 and 3 tumors despite their 
 status during our analysis, we might have ended up choosing ER-identified genes
  that were falsely connected with grade.\\
 
+The Sotiriou paper had 2 separate sets of previously unpublished tumor samples. 
+The first set (KJX64) consisted of 64 tumors. These samples were all ER positive 
+and nearly equally distributed between histologic grade 1 (n=33) vs. grade 3 (n=31). 
+These patients all received tamoxifen therapy, but specimens were obtained prior to 
+therapy initiation. The second set (KJ125) consisted of 125 tumor samples, which 
+included both ER positive (n=86) and ER negative (n=37) tumors. The histologic 
+grade was well distributed between grade 1 (n=34), grade 2 (n=46), or grade 3 (n=28), 
+and 17 samples did not have histologic grade known. Importantly, none of these patients
+ received systemic treatment.
+
 
 \subsection{Differential Expression Modeling Methods}
 \begin{wrapfigure}{r}{0.63\textwidth}
 \centering
 \includegraphics[scale=0.43]{docs/grade1and3differentiallyexpressed}
-\caption{Grade 1 and Grade 3 Differentially Expressed}\label{grade13diff}
+\caption{Grade 1 and Grade 3 Differentially Expressed.}\label{grade13diff}
 \end{wrapfigure}
 Our method of assessing histological grade of primary breast cancer consists of three phases. The first phase is
 a semi-supervised ranking of genes and grade 1 and grade 3 tumors based on maximum differential
@@ -237,7 +247,7 @@ Centroid(Grade_X)= \left[              \underset{x\in X}     \sum{  { {x_1}    \
 \ldots ,
  \underset{x\in X}     \sum{  { {x_{| gene signature |}}    \over {| X |} } }                 \right] 
 $$
-\caption{Grade Gene Expression Centroid Generation}\label{centroid}
+\caption{Grade Gene Expression Centroid Generation.}\label{centroid}
 \end{wrapfigure}
 Using the selected set of 49 genes as a signature we supposed a $|$gene signature$|-$dimensional subspace to build our model.
 Withing the subspace, we used the clinically provided grade labels to generate centroids for the two , 1 and 3 - grade, groups following
@@ -248,7 +258,7 @@ centers by more than 2 standard deviations of the cluster's mean variance.\\
 %\begin{figure}
 \centering
 \includegraphics[scale=0.38]{docs/grade2onupregulated3}
-\caption{Grade 2 Differentially Expressed Genes from Grade 1 and Grade 3}\label{grade2up}
+\caption{Grade 2 Differentially Expressed Genes from Grade 1 and Grade 3.}\label{grade2up}
 %\end{figure}
 \end{wrapfigure}
 For visual assessment of our analysis, we queried the grade 2 tumors against the grade 1 and 3 differentially expressed genes. The resulting chart
@@ -264,7 +274,7 @@ and linear. The new classifications were then used to recompute the KM-Survival 
  $$
 Grade(X) = \underset{C \in Centroids} {\mathrm{argmin}} ~ \left( \sqrt{\sum_{g\in genelist}{ (X_{g} - C_{g})^2}}\right)
 $$
-\caption{Nearest Centroid Classification}\label{classify}
+\caption{Nearest Centroid Classification.}\label{classify}
 \end{wrapfigure}
 
 \subsection{Unsupervised Machine Learning Methods}
@@ -324,9 +334,335 @@ CCNE2 & 9134 & cyclin E2 \\ \hline
 %Up-regulated genes from grade 3 and 1 differential expression applied to grade 2 tumors (Figure \ref{grade2up})
 
 \section{Results and Discussion}
-\section{Conclusion}
-90\% of the time it works all the time!\\
+
+In order to validate the aforementioned analysis, we created a set of Kaplan-Meier 
+(KM) survival curves. These curves show that our gene sets and classification 
+methods provide results that are at least as successful as those in the Sotiriou 
+paper at separating the grade 2 tumors into two disjoint sets. 
+For context, figure \ref{1S} shows three KM curves from the Sotiriou paper:
+\begin{figure}
+%\begin{figure}
+\centering
+\includegraphics[scale=0.35]{docs/Figure1S}
+\caption{Kaplan-Meier curves from Sotiriou, et al.}\label{1S}
+%\end{figure}
+\end{figure}
+Graph \ref{1S} shows the original data from their analysis. Grade 1, 2, and 3 tumor 
+curves clearly separate from each other, clearly creating 3 separate and distinct 
+classes. However, we would like to demonstrate that grade 2 tumors should 
+actually be classified as either grade 1 or grade 3. \\
+
+This is analysis is begun in graph B, as Sotiriou et al. used something 
+they called the “Gene Expression Grade Index” (GGI) to reclassify 
+grade 2 tumors. This index is shown below:
+$$
+GGI = scale\left( \sum_{j\in G_3}{ x_j } - \sum_{j\in G_1}{ x_j } - offset  \right)
+$$
+Gene Expression Grade Index, a tumor reclassification formula
+If the value of this formula was negative for a grade 2 sample, 
+the sample would be reclassified as a grade 1 tumor, while a positive 
+value would indicate a grade 3 tumor. Graph C shows all samples reclassified using the GGI.
+In our analysis, we chose a different re-classification technique. 
+This was described above as the nearest-centroid method. We reclassified 
+each grade 2 sample to either grade 1 or 3 to produce the graph in Figure \ref{3S}.
+\begin{wrapfigure}{r}{0.54\textwidth}
+%\begin{figure}
+\centering
+\includegraphics[scale=0.40]{docs/Figure3S}
+\caption{Reclassification of grade 2 samples using nearest-centroid method.}\label{3S}
+%\end{figure}
+\end{wrapfigure}
+Using Figure \ref{3s} we were able to see a difference between our re-graded curve 
+and the original. Our reclassification actually intensified the gap between the grade 1 and 3 curves.
+Figure \ref{4S} shows the integration of grade 2 reclassifications in Figure  \ref{3S} with 
+the original grade 1 and 3 samples. That is, the curve labeled “grade 1” in 
+Figure  \ref{4S} includes all of the original grade 1 samples and grade 2 samples 
+that were classified as “1-like”, while the grade 3 curve contains the original
+ grade 3 samples and the grade 2 samples that were classified as “3-like”. 
+The graph is analogous to the Sotiriou analysis shown in Figure \ref{4S}-C.
+ \begin{wrapfigure}{r}{0.64\textwidth}
+%\begin{figure}
+\centering
+\includegraphics[scale=0.38]{docs/Figure4S}
+\caption{All samples reclassified using the nearest-centroid method.}\label{4S}
+%\end{figure}
+\end{wrapfigure}
+For a sort of control, we thought it might be interesting to run a similar 
+analysis using the PAM50 geneset, a list of genes known to be differentially
+ expressed across breast cancer tumor subtypes. The reclassification using 
+the PAM50 genes (and nearest-centroid) is shown in the KM curve in Figure \ref{5S}.
+ \begin{wrapfigure}{r}{0.64\textwidth}
+%\begin{figure}
+\centering
+\includegraphics[scale=0.38]{docs/Figure5S}
+\caption{All samples reclassified using PAM50 genes.}\label{5S}
+%\end{figure}
+\end{wrapfigure}
+
+\subsection{Results}
+Baseline KM curves
+Based on the study’s data without any reclassification, KM survival analyses with outcome 
+defined as relapse free survival were performed for samples in the KJ125 set.   KM analysis 
+was performed for ER positive samples versus ER negative samples in the cohort (Figure \ref{1B}). 
+The ER negative samples tended to have worse prognosis than ER positive samples although 
+the difference did not reach statistical significance. This trend is consistent with literature 
+evidence that ER negative tumors are more malignant.  
+
+ \begin{wrapfigure}{r}{0.64\textwidth}
+%\begin{figure}
+\centering
+\includegraphics[scale=0.38]{docs/Figure5S}
+\caption{ KM curve of relapse free survival over time in ER positive versus ER negative samples.}\label{1B}
+%\end{figure}
+\end{wrapfigure}
+A KM curve was next generated for histologic grade among samples in the KJ125 cohort.  
+Histologic grades 2 and 3 were associated with worse prognosis with regard to relapse 
+free survival than grade 1 (Figure \ref{2B}).  Interestingly, there was no observed difference 
+between grade 2 and 3 tumors.  
+
+ \begin{wrapfigure}{r}{0.64\textwidth}
+%\begin{figure}
+\centering
+\includegraphics[scale=0.38]{docs/Figure2B}
+\caption{ KM curve of relapse free survival over time in groups based on histologic grades.}\label{2B}
+%\end{figure}
+\end{wrapfigure}
+
+Unsupervised clustering between grade 1 and grade 3 tumors within only the 
+KJX64 set was performed, which identified a list of 30 probe sets comprising 
+29 genes that are differentially expressed between grade 1 and grade 3 tumors 
+(Table \ref{T1}).  Specifically, these genes were upregulated in histologic grade 3 tumors 
+and downregulated in histologic grade 1 tumors.  
+
+
+\begin{figure}
+\begin{tabular}{| l | l | l | l | }
+    \hline
+202095\_s\_at & BIRC5 & 332 & baculoviral IAP repeat-containing 5\\ \hline 
+214710\_s\_at & CCNB1 & 891 & cyclin B1\\ \hline 
+210559\_s\_at & CDC2 & 983 & cell division cycle 2, G1 to S and G2 to M\\ \hline 
+202870\_s\_at & CDC20 & 991 & cell division cycle 20 homolog (S. cerevisiae)\\ \hline 
+209714\_s\_at & CDKN3 & 1033 & cyclin-dependent kinase inhibitor 3\\ \hline 
+204962\_s\_at & CENPA & 1058 & centromere protein A\\ \hline 
+204170\_s\_at & CKS2 & 1164 & CDC28 protein kinase regulatory subunit 2\\ \hline 
+203744\_at & HMGB3 & 3149 & high-mobility group box 3\\ \hline 
+211762\_s\_at & KPNA2 & 3838 & karyopherin alpha 2 (RAG cohort 1, importin alpha 1)\\ \hline 
+203915\_at & CXCL9 & 4283 & chemokine (C-X-C motif) ligand 9\\ \hline 
+201890\_at & RRM2 & 6241 & ribonucleotide reductase M2\\ \hline 
+209773\_s\_at & RRM2 & 6241 & ribonucleotide reductase M2\\ \hline 
+208079\_s\_at & AURKA & 6790 & aurora kinase A\\ \hline 
+201291\_s\_at & TOP2A & 7153 & topoisomerase (DNA) II alpha 170kDa\\ \hline 
+201195\_s\_at & SLC7A5 & 8140 & solute carrier family 7 (cationic amino acid transporter, y+ system), 5\\ \hline 
+218009\_s\_at & PRC1 & 9055 & protein regulator of cytokinesis 1\\ \hline 
+202705\_at & CCNB2 & 9133 & cyclin B2\\ \hline 
+205034\_at & CNE2 & 9134 & cyclin E2\\ \hline 
+203554\_x\_at & PTTG1 & 9232 & pituitary tumor-transforming 1\\ \hline 
+204033\_at & TRIP13 & 9319 & thyroid hormone receptor interactor 13\\ \hline 
+204825\_at & MELK & 9833 & maternal embryonic leucine zipper kinase\\ \hline 
+206102\_at & GINS1 & 9837 & GINS complex subunit 1 (Psf1 homolog)\\ \hline 
+202954\_at & UBE2C & 11065 & ubiquitin-conjugating enzyme E2C\\ \hline 
+204026\_s\_at & ZWINT & 1130 & ZW10 interactor\\ \hline 
+210052\_s\_at & TPX2 & 22974 & TPX2, microtubule-associated, homolog (Xenopus laevis)\\ \hline 
+204086\_at & PRAME & 23532 & preferentially expressed antigen in melanoma\\ \hline 
+202779\_s\_at & UBE2S & 27338 & ubiquitin-conjugating enzyme E2S\\ \hline 
+222077\_s\_at & RACGAP1 & 29127 & Rac GTPase activating protein 1\\ \hline 
+218039\_at & NUSAP1 & 51203 & nucleolar and spindle associated protein 1\\ \hline 
+218883\_s\_at & MLF1IP & 79682 & MLF1 interacting protein\\ \hline
+\end{tabular}
+\caption{List of 30 probe sets comprising 29 genes which are upregulated in KJX64 histologic 
+grade 3 samples and downregulated in grade 1 samples.}\label{T1}
+\end{figure}
+
+
+The centroid-based approach utilizing calculated Euclidean distances was applied to the 
+KJ125 samples.   Figure \ref{3B} depicts a KM analysis for relapse free survival based on 
+centroid-based reclassification of all KJ125 samples. This includes histologic grades 1, 2, 3, 
+and those with histologic grade not available.  Grade 1-like tumor samples were associated 
+with significantly lower risk of disease relapse.  Figure \ref{4B} depicts the KM analysis for 
+centroid-based reclassification of only grade 2 tumor samples in the KJ125 set and 
+also demonstrates better prognosis for those samples reclassified as grade 1-like.  
+
+ \begin{wrapfigure}{r}{0.64\textwidth}
+%\begin{figure}
+\centering
+\includegraphics[scale=0.38]{docs/Figure3B}
+\caption{ KM analysis of relapse free survival among all 
+KJ125 tumors reclassified as 1-like or 3-like based on 
+microarray gene expression profiles.}\label{3B}
+%\end{figure}
+\end{wrapfigure}
+
+
+ \begin{wrapfigure}{r}{0.64\textwidth}
+%\begin{figure}
+\centering
+\includegraphics[scale=0.38]{docs/Figure4B}
+\caption{ KM analysis of relapse free survival between 
+histologic grade 2 tumors in KJ125 set reclassified as 
+1-like or 3-like based on gene expression profiles.}\label{4B}
+%\end{figure}
+\end{wrapfigure}
+
+Next, the list of the 29 differentially expressed genes in the above table was queried against 
+the RNAseq gene expression data from by PAM50 subtype in TCGA \cite{Nature1}.  
+The clustering is demonstrated in Figure \ref{5B}.  There is a cluster of 108 samples with 
+increased expression of the genes of interest, which can be considered grade 3-like. 
+ Interestingly, nearly half of the samples in this cluster were basal-like tumors based on 
+PAM 50 signature (Table \ref{T2}).  In addition, 64\% of all basal-like tumors in the 
+analysis were found in this cluster. Furthermore, there were only 3 luminal A subtype
+ tumors within the grade 3-like cluster which comprised only 1.4\% of luminal A tumors
+ in this dataset. These findings are consistent with observations that luminal A subtype
+ tumors are less aggressive than basal-like tumors and serves as a validation of our 
+generated gene list. The TCGA paper does not provide survival data, which would 
+be another interesting validation to be explored in the future.
+
+ \begin{wrapfigure}{r}{0.64\textwidth}
+%\begin{figure}
+\centering
+\includegraphics[scale=0.38]{docs/Figure5B}
+\caption{ Query of TCGA RNAseq gene expression data with our generated list of genes 
+based on Sotiriou microarray expression profiles.  There is a cluster of increased gene 
+expression (yellow box) containing 108 samples which can be considered grade 3-like.}\label{5B}
+%\end{figure}
+\end{wrapfigure}
+
+
+\begin{figure}
+\begin{tabular}{| l | l | l | l | }
+    \hline
+\textbf{Subtype} & \textbf{Number of} & \textbf{Number of tumors in } & \textbf{Percent}\\  
+ &   \textbf{tumors}  & \textbf{cluster of increased} & \\
+ &  \textbf{ (N=434)} & \textbf{expression (N=108)} & \\
+\hline
+Normal & 6 & 2 & 33\% \\ \hline 
+ LumA & 201 & 3 & 1.4\% \\ \hline 
+ LumB & 101 & 35 & 34.6\% \\ \hline 
+ Her2 & 47 & 17 & 36.2\% \\ \hline 
+ Basal-like & 79 & 51 & 64.6\% \\ \hline 
+\end{tabular}
+\caption{Query of TCGA RNAseq gene expression data with our generated list of genes,
+ clustered by PAM50 subtype.  The cluster of increased expression (grade 3-like) has a preponderance 
+of Basal-like tumors and paucity of luminal A tumors.}\label{T2}
+\end{figure}
+
+We further explored the gene list of any functional annotation utilizing resource tools 
+\emph{DAVID} and \emph{KEGG}\cite{Huang1}\cite{Kanehisa1}\cite{Kanehisa2}\cite{Ogata1}.  These analyses found that our gene list 
+was functionally enriched for 3 pathways: cell cycle regulation, progesterone-mediated 
+oocyte meiosis, and ubiquitin-mediated protein degradation in figures \ref{6B}, \ref{7B}, and \ref{8B}. 
+ These pathways are consistent with the known features of advanced histologic 
+grade such as mitosis and dedifferentiation.  The majority of genes in our list
+ overlapped with the list generated by Sotiriou et al. Several of the selected 
+overlapping genes are shown in Table \ref{T3}.  Notably, these genes are known to 
+be associated with oncologic processes in multiple other organs according to 
+queries of the GeneCards web tool (www.genecards.org).  
+
+
+ \begin{wrapfigure}{r}{0.64\textwidth}
+%\begin{figure}
+\centering
+\includegraphics[scale=0.38]{docs/Figure6B}
+\caption{List of differentially upregulated genes in histologic 
+grade 3 tumors is enriched for the pathway of cell cycle regulation.}\label{6B}
+%\end{figure}
+\end{wrapfigure}
+
+
+ \begin{wrapfigure}{r}{0.64\textwidth}
+%\begin{figure}
+\centering
+\includegraphics[scale=0.38]{docs/Figure7B}
+\caption{ List of differentially upregulated genes in 
+histologic grade 3 tumors is enriched for the pathway 
+of progesterone-mediated oocyte maturation.}\label{7B}
+%\end{figure}
+\end{wrapfigure}
+
+ \begin{wrapfigure}{r}{0.64\textwidth}
+%\begin{figure}
+\centering
+\includegraphics[scale=0.38]{docs/Figure8B}
+\caption{ List of differentially upregulated genes in histologic grade 
+3 tumors is enriched for the pathway of ubiquitin-mediated protein 
+degradation.}\label{8B}
+%\end{figure}
+\end{wrapfigure}
+
+\begin{figure}
+\begin{tabular}{| l | l | l | l | }
+    \hline
+\textbf{Gene} & \textbf{Protein} & \textbf{Function} & \textbf{Associated diseases}\\ \hline 
+TPX2 & TPX2, microtubule & Required for assembly of mitotic & Hepatocellular \\
+ &  -associated, homolog  & spindles & carcinoma \\
+ & (Xenopus laevis) &   &  Colorectal cancer
+\\ \hline
+CCNB1 & Cyclin B1 & Initiates mitosis & Many cancers\\ \hline 
+CDC20 & cell division cycle 20 & Cell cycle regulation & Ataxia-telangiectasia \\
+ & homolog (S. cerevisiae)  & &  ($\uparrow$ cancer risk) 
+\\ \hline
+PTTG1 & pituitary tumor- & Chromosome stability, negatively & Thymic hyperplasia\\
+ & transforming 1 & regulates TP53 &  Nelson syndrome \\
+ & & & (pituitary adenoma)
+\\ \hline 
+UBE2C & ubiquitin-conjugating & Targeting proteins for degradation & Esophageal carcinoma \\
+ & enzyme E2C  & & Papillary thyroid \\
+ & & & carcinoma
+\\ \hline 
+KPNA2 & karyopherin alpha 2 & Nuclear protein import & Nijmegen breakage \\
+ & (RAG cohort 1, importin & & syndrome ($\uparrow$ cancer \\
+ & alpha 1) &  &   risk) 
+\\ \hline 
+BIRC5 & baculoviral IAP repeat- &  Inhibits apoptosis and promotes & Cervical cancer \\
+ & containing 5 & cell proliferation &  Laryngeal carcinoma
+\\ \hline
+\end{tabular}
+\caption{Selected genes of interest which were identified to be upregulated in 
+Grade 3 tumors in our analyses as well as the analyses by Sotiriou.  
+These genes are recognized to be associated with other oncologic 
+processes and systemic disorders associated with cancer risk.}\label{T3}
+\end{figure}
+
+
+
+\subsection{Discussion}
+\subsection{Significance}
+As shown above, our discovered geneset and reclassification method were 
+able to split grade 2 tumors into two disjoint sets. These sets may be more 
+helpful in tumor diagnosis and treatment, as grade 2 diagnoses are currently
+ not considered “not informative for clinical decision making” \cite{Sotiriou1}.
+Our methods were able to produce a result that was slightly better than the 
+Sotirou paper at a significant p-value (p=0.05). In addition, using the PAM50
+ geneset, we were able to reproduce these results and achieve an almost 
+identical graph. This was unexpected, as PAM50 genes are known to 
+separate samples based on their subtype rather than their grade. However, 
+it is notable to mention that grade 1 and 3 tumors are more likely to be Basal 
+and Luminal tumors, respectively. This explains the similarity between our 
+and the PAM50 results.
+\subsection{Caveats}
+While we were able to analyze the given dataset in an unbiased manner, 
+there was no way for us to control the data given to us. In that vein, we 
+were unable to control the research population for tumor size, age, 
+margin, ER status, or lymph node status.\\
+
+On a similar note, there was no way for us to alter our survival analysis 
+based on what treatments were being offered to each patient. The 
+possibility that different patients were participating in different treatments 
+throughout their lives is enough to alter the confidence intervals on our KM 
+curves.
+\subsection{Future Work}
+Our work with the Sotirou paper was only able to reproduce their analysis 
+and improve upon it slightly. There is still a large amount of work that could 
+be done to further validate our methods, as well as to delve deeper in to the 
+work done by both our teams.\\
+
+Firstly, in order to prove our work we would like to perform validation in
+ some other independent datasets. In addition, we could perform a 
+prospective study at some point in the future. Unfortunately, this does seem 
+unlikely.\\
+
+Moreover, an easier way to validate our results would be to perform the same 
+analysis using the Distant Metastasis Free Survival Rate (DMFS). Our work 
+solely included Relapse Free Survival (DFS) data.
+
 \bibliography{refs}
 \bibliographystyle{ieeetr} \markright{ }
-
 \end{document}
